# npmCLI

./: .gitignore  README.md  __init__.py  main.py  nginxAPI.py  nginxCLI.py  npmAPI.py  npmCLI.py  pyproject.toml
nginxCLI/: __init__.py  nginxAPI.py
