[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nginxCLI"
description = "An NginxProxyManager CLI."
readme = "README.txt"
requires-python = ">=3.7"
version = "1.0"
dynamic = ["dependencies"]

[tools.setuptools.dynamic]
dependencies = {file = ["generated-requirements.txt"]}