[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nginxCLI"
description = "An NginxProxyManager CLI."
readme = "README.md"
requires-python = ">=3.7"
version = "1.0"
dynamic = ["dependencies"]

#[tool.setuptools]
#packages = ["nginxCLI.py", "nginxAPI.py"]

[tool.setuptools.dynamic]
dependencies = {file = ["generated-requirements.txt"]}