[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nginxCLI"
description = "An NginxProxyManager CLI."
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["generated-requirements.txt"]}
version = {file = ["version.txt"]}